devops/kubernetes/adminer-int.yaml
# adminer service
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: int
  labels:
    app: adminer
spec:
  type: NodePort
  ports:
  - name: adminer-int-svc
    port: 8080
    targetPort: 8080
    nodePort: 30777
  selector:
    app: adminer


#adminer deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: int
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - env:
        - name: MYSQL_PASSWORD
          value: "rootwork"
        - name: MYSQL_ROOT_PASSWORD
          value: "rootwork"
        - name: MYSQL_USER
          value: "root"
        - name: ADMINER_HOST
          value: "mycluster.default.svc.cluster.local"
            #- name: ADMINER_PASSWORD
            #value: ""
        - name: ADMINER_PORT
          value: "3306"
        #- name: PMA_USER
        #  value: root
        image: adminer
        name: adminer
        ports:
        - containerPort: 8080
        
        resources: {}
        volumeMounts:
        - mountPath: /sessions
          name: adminer-int-pvc
        #- mountPath: /usr/local/etc/php/conf.d/php-adminer.ini
        #  name: adminer-claim
      restartPolicy: Always
      volumes:
      - name: adminer-int-pvc
        persistentVolumeClaim:
          claimName: adminer-int-pvc
      
      
status: {}
