devops/kubernetes/mariadb-int.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-int # host
  namespace: int
  labels:
    app: mariadb-int
spec:
  ports:
  - name: int-db-port
    port: 3306
    targetPort: 3306
  selector:
    app: mariadb-int
    

#mysql deployment
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mariadb-int
  namespace: int
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-int   
  strategy:
    type: Recreate
  template: 
    metadata: 
      labels: 
        app: mariadb-int      
    spec:
      containers:
       - image: mariadb:latest
         name: mariadb-int-cont
         resources: {}
            #limits:
            #  cpu: 800m # the CPU limit is define in milicore (m)
            #  memory: 800Mi # the Memory is define in Mebibytes (Mi)
            #requests:
            #  cpu: 500m
         ports:
         - containerPort: 3306
         volumeMounts:
         - name: wsl-volume
           mountPath: /var/lib/mysql
      volumes:
      - name: wsl-volume
        persistentVolumeClaim:
          claimName: wsl-pvc-db

status: {}
