devops/kubernetes/workstation-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workstation-ingress-prod
  annotations:
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: my.workstation.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workstation-svc-prod
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: workstation-nodeport-prod
spec:
  selector:
    app: workstation-prod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32180
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: workstation-svc-prod
spec:
  selector:
    app: workstation-prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workstation-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workstation-prod
  template:
    metadata:
      labels:
        app: workstation-prod
    spec:
      volumes:
        - name: workstation-boostrap-cm-vol
          # Populate the volume with config map data
          configMap:
            # `name` here must match the name 
            # specified in the ConfigMap's YAML 
            name: workstation-boostrap-cm-prod
        - name: workstation-env-vol-prod
          secret:
            secretName: workstation-secret-prod
            items:
            - key: env_file
              path: .env

      containers:
        - name: workstation
          image: registry.workstation.co.uk/workstation:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "stat -c %a /tmp && ls -la /tmp && cp /tmp/configmap/workstation-bootstrap.sh /usr/local/bin/workstation-bootstrap.sh && chmod +x /usr/local/bin/workstation-bootstrap.sh && sh /usr/local/bin/workstation-bootstrap.sh"]
          volumeMounts:
            - name: workstation-env-vol-prod
              mountPath: /tmp/secrets
              # `bootstrap` mount bash script from configmap workstation-boostrap-cm-prod
              # execute in the poststrat lifecycle hook
            - name: workstation-boostrap-cm-vol
              mountPath: /tmp/configmap
